--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "wgd-qs",
 	"productName": "QS",
-	"version": "0.0.1-beta.9",
-	"description": "App zur Qualitätssicherung der publizierten XML-Dateien von „Wortgeschichte digital“, dem an der „Akademie der Wissenschaften zu Göttingen“ angesiedelten Teilprojekt des „Zentrums für digitale Lexikographie der deutschen Sprache“, gefördert durch das „Bundesministerium für Bildung und Forschung“",
+	"version": "0.0.1-beta.10",
+	"description": "Qualitätssicherung-App von „Wortgeschichte digital“, dem an der „Akademie der Wissenschaften zu Göttingen“ angesiedelten Teilprojekt des „Zentrums für digitale Lexikographie der deutschen Sprache“, gefördert durch das „Bundesministerium für Bildung und Forschung“",
 	"keywords": [
 		"Git",
 		"Lexikographie",
